--- a/style.css
+++ b/style.css
@@ -2,9 +2,31 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: rgb(65, 62, 62);
+    color: white;
+    height: 70;
+    padding-left: 40px;
 }
 
 .menu-list{
     display: flex;
     flex-direction: row;
+    gap: 20px;
+    cursor: pointer;
+}
+
+.menu-list:hover{
+    color:#FF7518
+}
+
+button{
+    border: none;
+    border-radius: 4px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 18px;
+    padding-right: 18px;
+    margin-right: 30px;
+    font-weight: 100;
+    cursor: pointer;
 }
